<resources>
    <string name="app_name">LIVFRIEGHT</string>
    <string name="activity_login_hint_email">Email</string>
    <string name="activity_login_hint_username">Username/यूज़रनेम</string>
    <string name="activity_password">Password/पासवर्ड</string>
    <string name="activity_login_button_submit">SUBMIT/सबमिट करे</string>
    

    <string name="activity_main_truck_entry">Truck Entry/ट्रक एंट्री</string>
    <string name="activity_main_receiving">Receiving/रिसीविंग</string>
    <string name="activity_main_rokad">Rokad/रोकड़</string>

    <string name="activity_lr_no">LR Number/एलआर नंबर
        <font color='red'>*</font>
    </string>
    <string name="activity_weight">Weight/वजन
        <font color='red'>*</font>
    </string>
    <string name="activity_date">Date/तारीख
        <font color='red'>*</font>
    </string>
    <string name="activity_truck_no">Truck No./ट्रक नंबर
        <font color='red'>*</font>
    </string>
    <string name="activity_destination">Destination/स्थान
        <font color='red'>*</font>
    </string>
    <string name="activity_delivery_no">Delivery No./डिलीवरी नंबर
        <font color='red'>*</font>
    </string>
    <string name="activity_invoice_no">Invoice No./इनवॉइस नंबर
        <font color='red'>*</font>
    </string>
    <string name="activity_party">Party Name/पार्टी का नाम
        <font color='red'>*</font>
    </string>
    <string name="activity_cash_advance">Cash Advance/कैश एडवांस
        <font color='red'>*</font>
    </string>
    <string name="activity_diesel_advance">Diesel Advance/डीजल एडवांस
        <font color='red'>*</font>
    </string>
    <string name="activity_bill_rate">Bill Rate/बिल रेट
        <font color='red'>*</font>
    </string>

    <string name="activity_total_company_billing">Total Company Billing/टोटल कंपनी बिलिंग</string>


    <string name="activity_office">Office/ऑफिस</string>
    <string name="activity_total_bhada">Total Bhada/टोटल भाड़ा</string>
    <string name="activity_total_advance">Total Advance/टोटल एडवांस</string>
    <string name="activity_shortage">Shortage/शोर्टैज</string>
    <string name="activity_commission">Commission/कमीशन</string>



    <string name="please_enter_username">Please enter Username</string>
    <string name="please_enter_email">Please enter Email</string>
    <string name="please_enter_mobile">Please enter Mobile</string>
    <string name="please_enter_valid_mobile">Please enter valid Mobile</string>
    <string name="please_enter_password">Please enter Password</string>

    <string name="progress_dialog_text_loading">Loading&#8230;</string>
    <string name="progress_dialog_text_generating_survey">Generating Survey&#8230;</string>
    <string name="progress_dialog_text_logging_out">Logging Out&#8230;</string>
    <string name="progress_dialog_text_logging_in">Logging In&#8230;</string>
    <string name="progress_dialog_text_please_wait">Please wait&#8230;</string>
    <string name="progress_dialog_text_sending_request">Sending Request&#8230;</string>
    <string name="progress_dialog_text_submitting_responses">Submitting Responses&#8230;</string>
    <string name="progress_dialog_text_initializing">Initializing Application&#8230;</string>

    <string name="snackbar_text_no_internet_connection_available">No Internet Connection available
    </string>
    <string name="snackbar_text_error_occurred">Error Occurred</string>
    <string name="snackbar_text_exception_occurred">Exception Occurred</string>
    <string name="snackbar_text_invalid_access_pin">Invalid Access PIN</string>

    <string name="snackbar_action_go_to_settings">GO TO SETTINGS</string>
    <string name="snackbar_action_dismiss">DISMISS</string>
    <string name="snackbar_action_retry">RETRY</string>

    <string name="snackbar_action_undo">UNDO</string>


    <string name="dialog_text_new_version_available">New version of the application is available.
        Please update
    </string>
    <string name="dialog_text_subscription_expired">Your subscription has expired. The app will
        Logout now
    </string>


    <string name="dialog_hint_optional">optional</string>

    <string name="dialog_action_yes">YES</string>
    <string name="dialog_action_no">NO</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">CANCEL</string>
    <string name="dialog_action_save">SAVE</string>
    <string name="dialog_action_logout">LOGOUT</string>
    <string name="dialog_action_submit">SUBMIT</string>
    <string name="dialog_action_resend_otp">RESEND OTP</string>
    <string name="dialog_action_proceed">PROCEED</string>
    <string name="dialog_action_ignore">IGNORE</string>
    <string name="dialog_action_update">UPDATE</string>
    <string name="dialog_action_close">CLOSE</string>
    <string name="dialog_action_show_all">SHOW ALL</string>

    <string name="activity_truck_number">Truck Number</string>
    <string name="activity_truck_owner_name">Owner Name</string>
    <string name="activity_truck_owner_number">Owner Number</string>
    <string name="activity_pan_number">PAN Number</string>
    <string name="activity_company_rate">Company Rate/कंपनी रेट</string>
    <string name="activity_truck_number_select">SELECT</string>

    <string name="activity_truck_destination_name">Destination</string>
    <string name="activity_truck_destination_address">Address</string>


</resources>
