<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:TagsEditText="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/app_background_color">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        TagsEditText:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            >


            <TextView
                android:id="@+id/tvTruckEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_margin_small"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin_small"
                android:background="@drawable/button_bg"
                android:elevation="@dimen/button_elevation"
                android:gravity="center"
                android:padding="@dimen/activity_margin"
                android:text="@string/activity_main_truck_entry"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/text_size_extra_large" />



            <TextView
                android:id="@+id/tvReceiving"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_margin_small"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin_small"
                android:background="@drawable/button_bg"
                android:elevation="@dimen/button_elevation"
                android:gravity="center"
                android:padding="@dimen/activity_margin"
                android:text="@string/activity_main_receiving"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/text_size_extra_large" />


            <TextView
                android:id="@+id/tvRokad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_margin_small"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin_small"
                android:background="@drawable/button_bg"
                android:elevation="@dimen/button_elevation"
                android:gravity="center"
                android:padding="@dimen/activity_margin"
                android:text="@string/activity_main_rokad"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/text_size_extra_large" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:layout_alignParentBottom="true"
            android:textColor="@color/text_color_black"
            android:gravity="center"
            android:layout_margin="@dimen/activity_margin_extra_large"
            android:padding="@dimen/activity_margin"
            />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>