<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:TagsEditText="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/app_background_color">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:visibility="visible">

        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            style="@style/Widget.MyApp.ActionBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:animateLayoutChanges="true"
            android:background="@android:color/transparent"
            android:contentInsetEnd="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetStart="0dp"
            android:visibility="visible"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:layout_collapseMode="pin">

            <RelativeLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/rlBack"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/ivBack"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_back"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tvBack"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toEndOf="@+id/ivBack"
                        android:layout_toRightOf="@+id/ivBack"
                        android:gravity="center_vertical"
                        android:text="Home"
                        android:textColor="@color/text_color_white"
                        android:textSize="@dimen/text_size_small" />


                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/activity_main_receiving"
                        android:textColor="@color/text_color_white"
                        android:textSize="@dimen/text_size_medium" />
                </RelativeLayout>

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        TagsEditText:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tvOffice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_margin"
                        android:layout_marginRight="@dimen/activity_margin"
                        android:layout_marginTop="@dimen/activity_margin_small"
                        android:textColor="@color/primary"
                        android:text="@string/activity_office"
                        android:textSize="@dimen/text_size_extra_small" />

                    <EditText
                        android:id="@+id/etOffice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_margin_small"
                        android:layout_marginLeft="@dimen/activity_margin"
                        android:layout_marginRight="@dimen/activity_margin"
                        android:textSize="@dimen/text_size_medium"
                        android:background="@drawable/edittext_underline"/>


                    <TextView
                        android:id="@+id/tvLrNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_margin"
                        android:layout_marginRight="@dimen/activity_margin"
                        android:layout_marginTop="@dimen/activity_margin_small"
                        android:inputType="number"
                        android:text="@string/activity_lr_no"
                        android:textSize="@dimen/text_size_extra_small"
                        android:textColor="@color/primary"/>


                    <EditText
                        android:id="@+id/etLrNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_margin_small"
                        android:layout_marginLeft="@dimen/activity_margin"
                        android:layout_marginRight="@dimen/activity_margin"
                        android:textSize="@dimen/text_size_medium"
                        android:background="@drawable/edittext_underline"/>


                    <TextView
                        android:id="@+id/tvTotalBhada"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_margin"
                        android:layout_marginRight="@dimen/activity_margin"
                        android:layout_marginTop="@dimen/activity_margin_small"
                        android:text="@string/activity_total_bhada"
                        android:textSize="@dimen/text_size_extra_small"
                        android:textColor="@color/primary"/>

                    <EditText
                        android:id="@+id/etTotalBhada"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_margin_small"
                        android:layout_marginLeft="@dimen/activity_margin"
                        android:layout_marginRight="@dimen/activity_margin"
                        android:background="@drawable/edittext_underline"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/tvTotalAdvance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_margin"
                        android:layout_marginRight="@dimen/activity_margin"
                        android:layout_marginTop="@dimen/activity_margin_small"
                        android:text="@string/activity_total_advance"
                        android:textSize="@dimen/text_size_extra_small"
                        android:textColor="@color/primary"/>

                    <EditText
                        android:id="@+id/etTotalAdvance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_margin_small"
                        android:layout_marginLeft="@dimen/activity_margin"
                        android:layout_marginRight="@dimen/activity_margin"
                        android:textSize="@dimen/text_size_medium"
                        android:background="@drawable/edittext_underline"/>

                    <TextView
                        android:id="@+id/tvShortage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_margin"
                        android:layout_marginRight="@dimen/activity_margin"
                        android:layout_marginTop="@dimen/activity_margin_small"
                        android:text="@string/activity_shortage"
                        android:textSize="@dimen/text_size_extra_small"
                        android:textColor="@color/primary"/>

                    <EditText
                        android:id="@+id/etShortage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_margin_small"
                        android:layout_marginLeft="@dimen/activity_margin"
                        android:layout_marginRight="@dimen/activity_margin"
                        android:textSize="@dimen/text_size_medium"
                        android:background="@drawable/edittext_underline"/>

                    <TextView
                        android:id="@+id/tvCommission"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_margin"
                        android:layout_marginRight="@dimen/activity_margin"
                        android:layout_marginTop="@dimen/activity_margin_small"
                        android:text="@string/activity_commission"
                        android:textSize="@dimen/text_size_extra_small"
                        android:textColor="@color/primary"/>

                    <EditText
                        android:id="@+id/etCommission"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_margin_small"
                        android:layout_marginLeft="@dimen/activity_margin"
                        android:layout_marginRight="@dimen/activity_margin"
                      android:background="@drawable/edittext_underline"
                        android:textSize="@dimen/text_size_medium" />


                </LinearLayout>


                <TextView
                    android:id="@+id/tvSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_margin_small"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:layout_marginTop="@dimen/activity_margin_small"
                    android:background="@drawable/button_bg"
                    android:elevation="@dimen/button_elevation"
                    android:gravity="center"
                    android:padding="@dimen/activity_button"
                    android:text="@string/activity_login_button_submit"
                    android:textColor="@color/text_color_white"
                    android:textSize="@dimen/text_size_medium" />


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>